# wixcmake

./: CMakeLists.txt  COPYING  README  wixtest.c
.github/workflows/: test.yml
CMake/: FindPkgMacros.cmake
wix/: License.rtf  cmake_extra_dialog.wxs  patch_desktop_shortcut.xml  working_path.wxs  working_path.xml
